# budlumm

./: .gitignore  .gitleaks.toml  ARENA1_GURUR.md  ARENA_AI.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  SECURITY.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml  semver-exceptions.txt
.github/workflows/: benchmark.yml  ci.yml  dependency-review.yml  determinism.yml  docker-smoke.yml  fuzz-nightly.yml  migration-lockgen.yml  miri.yml  security-audit.yml  semver.yml  supply-chain-extra.yml
B.U.D./: Cargo.toml
B.U.D./src/: lib.rs
benches/: domain_throughput.rs
benches/micro/: timing_safe.rs
budZero/: Cargo.toml  README.md  budzero-claude-md.md  deny.toml  example_loop.bud  patch_compiler.py  state.json
budZero/bud-cli/: Cargo.toml
budZero/bud-compiler/: Cargo.toml
budZero/bud-compiler/src/: ast.rs  codegen.rs  lib.rs  sema.rs
budZero/bud-isa/: Cargo.toml
budZero/bud-node/: Cargo.toml
budZero/bud-node/src/: bitswap.rs  lib.rs  sharding.rs  store.rs
budZero/bud-state/: Cargo.toml
budZero/bud-state/src/: note.rs
budZero/bud-vm/: Cargo.toml
budZero/budl/: README.md
budZero/docs/: 07_prover_stabilizasyonu_ve_testler.md  09_faz0_stabilizasyon.md  BudL_SPEC.md  README.md  proof_format_release_checklist.md
budlumCore/: Cargo.toml  build.rs
budlumCore/benches/: domain_throughput.rs
budlumCore/examples/: print_genesis_hash.rs
budlumCore/src/: developer_os.rs  error.rs  lib.rs
budzero/: README.md  budzero-claude-md.md  deny.toml  example.bud  example2.bud  flake.nix  patch_parser.py  test_prover.bud
budzero/bud-cli/: Cargo.toml
budzero/bud-compiler/: Cargo.toml
budzero/bud-isa/: Cargo.toml
budzero/bud-node/: Cargo.toml
budzero/bud-proof/: Cargo.toml
budzero/bud-proof/benches/: proof_baseline.rs
budzero/bud-proof/src/: plonky3_air.rs  plonky3_prover.rs  trace_layout_tests.rs
budzero/bud-proof/tests/: soundness_negatives.rs
budzero/bud-state/: Cargo.toml
budzero/bud-vm/: Cargo.toml
budzero/docs/: 05_stark_ve_plonky3.md  06_compiler_ve_ekosistem.md  07_prover_stabilizasyonu_ve_testler.md  08_production_hardening_ve_soundness.md  09_faz0_stabilizasyon.md  10_gelismis_dil_ozellikleri_ve_bellek_yonetimi.md  adding_opcodes.md  development.md  vm_trace_schema.md
budzero/scripts/: check_docs_links.py
budzero/verifier-registry/: Cargo.toml
budzero/verifier-registry/src/: evidence.rs  registry.rs  role.rs
config/: archive.toml  devnet.toml  mainnet.toml  testnet.toml
config/personas/: developer.toml  enterprise-poa.toml  user-devnet.toml
docs/: ADIM3_PLAN_VE_GOREV_DAGILIMI.md  ADIM4_ARENA2_ANALIZ_2026-07-15.md  AGENT_AUDIT_REPORT.md  AI_AJAN_TALIMATI_GENEL.md  AI_BIRLIGI.md  AI_ONBOARDING.md  AI_ONCHAIN_EXECUTION_RESEARCH.md  ARCHITECTURE.md  ARENA2_ACCESSGRANT_KARAR_KAYDI_2026-07-18.md  ARENA2_P1_ACCESSGRANT_DENETIM_2026-07-18.md  ARENA3_BACKLOG_2026-07-18.md  ARENA3_P2_SCHEMA4_SECURITY_REVIEW_2026-07-18.md  ARENA4_APPROVED_SYSTEMS_ROADMAP_2026-07-20.md  AUDIT_CHECKLIST.md  BUDLUM_100_KARAR_ANKETI_ARENA2_2026-07-17.md  BUDLUM_CONSTITUTION.md  BUDLUM_ECOSYSTEM_INTERFACE.md  BUDLUM_HARDENING_PROTOCOL.md  BUDLUM_PHASE12.9_HARDENING_SWEEP.md  BUDZKVM_TRACE_LAYOUT.md  BUG_BOUNTY.md  CRYPTO_DOMAIN_TAGS.md  C_LEGACY_PROOF_VERIFICATION.md  D2_GIZLILIK_OPCODE_TASARIM_2026-07-22.md  D4_VERIFICATION_REPORT.md  DEVIR_RAPORU.md  GIZLILIK_KATMANI_ZKVM_TALIMATI.md  GOVERNANCE.md  HUB_INTERFACE_PROTOTYPE.html  KALAN_ISLER.md  KONSOLIDASYON_BUDLUMCORE_BUD_TASARIM.md  MAINNET_GENESIS_CEREMONY.md  MAINNET_READINESS.md  NETWORK_HARDENING_SPEC.md  ORG_ROADMAP_AUDIT.md  P2_SCHEMA4_UYGULAMA_PLANI_2026-07-18.md  PERSONAS.md  PHASE0.378_EXECUTION_PLAN.md  PHASE10.5_CROSS_CUTTING_GAP_ANALYSIS.md  PHASE12_ARENA4_RD_PLAN.md  (+34 more)
docs/archive/: 02_settlement_test_matrix.md  ADVANCED_BLOCKCHAIN_TESTING_RESEARCH.md  AI_BIRLIGI.md  AI_KOORDINASYON_TALIMATI_2026-07-18.md  AI_ONBOARDING.md  ARENA2_AI_INFERENCE_DESIGN_REVIEW_2026-07-18.md  ARENA2_P0_TRANSACTION_TRANSPORT_AUDIT_2026-07-18.md  ARENA2_P0_TYPED_PROTO_MIGRATION_PLAN_2026-07-18.md  ARENA2_TALIMAT_D4_D1_2026-07-22.md  ARENA3_MAINNET_READINESS_AUDIT_2026-07-22.md  ARENA3_SECURITY_VERIFICATION_AUDIT_2026-07-20.md  ARENA3_TALIMAT_BUDL_LANGUAGE.md  ARENA3_TALIMAT_KONSOLIDASYON_DEVIR.md  ARENA3_V19_PERSISTENCE_FAIL_CLOSED_REVIEW_2026-07-18.md  ARENA4_APPROVED_SYSTEMS_ROADMAP_2026-07-20.md  ARENA4_AUDIT_HARDENING_SUMMARY.md  ARENA_GOREV_DAGILIMI_2026-07-17.md  BUDLUM_100_KARAR_ANKETI_ARENA2_2026-07-17.md  BUDLUM_ANALIZ_GOREVLER_2026-07-22.md  BUDLUM_HARDENING_PROTOCOL.md  BUDLUM_PHASE10.md  BUDLUM_PHASE11.md  BUDLUM_PHASE11_2.md  BUDLUM_PHASE12.9_HARDENING_SWEEP.md  BUDLUM_TEST_INVENTORY.md  BUDZERO_DERIN_DENETIM_ARENA3.md  BUD_INTERIM.md  CI_ROOT_CAUSE_ANALYSIS_ARENA5.md  (+28 more)
fuzz/: Cargo.toml  README.md
fuzz/corpus/block_deserialize/: seed_alt
fuzz/corpus/consensus_state_transition/: seed_deep_reorg  seed_produce_few
fuzz/corpus/evm_mpt_verify/: empty-trie-frame
fuzz/corpus/fuzz_blockchain_serialize/: seed_long
fuzz/corpus/relayer_escrow/: seed_lock_ops  seed_sweep
fuzz/corpus/zk_verifier/: seed_struct_mode
fuzz/corpus/zkvm/: 04_poseidon_hash.bud  05_memory_ops.bud
fuzz/fuzz_targets/: consensus_validate.rs  evm_mpt_verify.rs  evm_rlp_decode.rs  fuzz_blockchain_serialize.rs
ops/: backup_restore_drill.sh
proto/: protocol.proto
scripts/: adim3_smoke_rpc.sh  audit-deps.sh  check-audit-prep-gate.sh  check-bns-gate.sh  check-bud-e2e.sh  check-clippy-extra.sh  check-economy-invariants.sh  check-fork-choice-gate.sh  check-governance-invariants.sh  check-network-hardening-gate.sh  check-node-classification-gate.sh  check-poa-compliance-gate.sh  check-semver.sh  check-storage-proof-production-boundary.sh  check-storage-provider-gate.sh  check-timing-safe.sh  check-udeps.sh  check-wallet-core-gate.sh  docker-smoke-mainnet.sh  generate-sbom.sh  generate_zkvm_seed_corpus.sh  pre-push-check.sh
src/: lib.rs  main.rs
wallet-core/: Cargo.toml
wallet-core/src/: lib.rs  privacy_crypto.rs  privacy_transfer.rs  tee.rs
(+374 files in other folders)
