[package]
name = "budlum-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0"

[dependencies]
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"

# P2P Networking
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "ping",
    "identify",
    "mdns",
    "gossipsub",
    "kad",
    "request-response",
] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2.2.0"
rand = "0.9.2"
sha3 = "0.10.8"
prost = "0.14.3"
prost-types = "0.14.3"
bytes = "1.11.1"
bincode = "1.3"
schnorrkel = "0.11.5"
bls12_381 = "0.8.0"
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
bitvec = "1.0.1"
group = "0.13"

jsonrpsee = { version = "0.24", features = ["server", "macros"] }
rand_core = { version = "0.6", features = ["getrandom"] }
prometheus = "0.13"
toml = "0.8"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = "0.4"
cryptoki = "0.6"
secrecy = "0.8"
subtle = "2"
async-trait = "0.1"
rayon = "1.10"
# BudZero/BudZKVM is part of this repository as of Tur 13.5. Keeping the
# crates under `budzero/` preserves their own workspace while removing the
# fragile sibling-checkout/pinned-repository requirement.
bud-isa = { path = "budzero/bud-isa" }
bud-vm = { path = "budzero/bud-vm" }
bud-proof = { path = "budzero/bud-proof" }

[build-dependencies]
prost-build = "0.14.3"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "bench_sig_verify"
path = "benches/micro/sig_verify.rs"

[[bin]]
name = "bench_merkle_update"
path = "benches/micro/merkle_update.rs"

[[bin]]
name = "bench_merkle_scaling"
path = "benches/micro/merkle_scaling.rs"

[[bin]]
name = "bench_internal_pipeline_tps"
path = "benches/single_node/internal_pipeline_tps.rs"
