[package]
name = "budlum-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0"
# : root cargo-deny `unlicensed = "deny"` kuralı kendi crate'imizi de
# reddetmesin diye zorunlu. Repo kökündeki LICENSE (MIT) ile aynı.
license = "MIT"

[features]
default = ["pq-dilithium"]
pq-dilithium = ["dep:pqcrypto-dilithium", "dep:pqcrypto-traits"]
pq-ml-dsa = ["dep:ml-dsa"]

[dependencies]
sha2 = "0.11"
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
sled = "0.34"

# P2P Networking
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "ping",
    "identify",
    "mdns",
    "gossipsub",
    "kad",
    "request-response",
] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2.2.0"
rand = "0.10.1"
sha3 = "0.12"
prost = "0.14.3"
prost-types = "0.14.3"
bytes = "1.11.1"
bincode = "1.3"
schnorrkel = "0.11.5"
bls12_381 = "0.8.0"
pqcrypto-dilithium = { version = "0.5.0", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
ml-dsa = { version = "0.1.1", optional = true, features = ["getrandom"] }
bitvec = "1.0.1"
group = "0.14"

jsonrpsee = { version = "0.24", features = ["server", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand_core = { version = "0.6", features = ["getrandom"] }
prometheus = "0.14"
toml = "1.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = "0.4"
cryptoki = "0.12"
secrecy = "0.10"
subtle = "2"
async-trait = "0.1"
thiserror = "2"
rayon = "1.10"
# BudZero/BudZKVM is part of this repository as of . Keeping the
# crates under `budzero/` preserves their own workspace while removing the
# fragile sibling-checkout/pinned-repository requirement.
bud-isa = { path = "budzero/bud-isa" }
bud-vm = { path = "budzero/bud-vm" }
bud-proof = { path = "budzero/bud-proof" }
bud-node = { path = "budzero/bud-node" }

[build-dependencies]
prost-build = "0.14.3"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.5"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bin]]
name = "bench_sig_verify"
path = "benches/micro/sig_verify.rs"

[[bin]]
name = "bench_merkle_update"
path = "benches/micro/merkle_update.rs"

[[bin]]
name = "bench_merkle_scaling"
path = "benches/micro/merkle_scaling.rs"

[[bin]]
name = "bench_internal_pipeline_tps"
path = "benches/single_node/internal_pipeline_tps.rs"

# : dudect-tarzı timing-safe regresyon testi. harness=false ile
# stable toolchain'de `cargo bench --bench timing_safe` çalışır; CI kapısıdır.
[[bench]]
name = "timing_safe"
path = "benches/micro/timing_safe.rs"
harness = false

# Domain throughput/latency benchmarks (criterion.rs)
[[bench]]
name = "domain_throughput"
path = "benches/domain_throughput.rs"
required-features = ["__bench_domain_throughput_disabled"]
harness = false
