[package]
name = "budlum-fuzz"
version = "0.0.0"
edition = "2021"
rust-version = "1.94.0"
publish = false

# Fuzz harness'leri. CI'da çalıştırılmaz; Tur 15 §1.7 sadece setup.
# Fuzzing run'u manuel olarak: `cargo +nightly fuzz run <target>`.
# Kabul kriteri: hedef target sayısı ≥ 1, build temiz (cargo check).

[dependencies]
budlum-core = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "fuzz_blockchain_serialize"
path = "fuzz_targets/fuzz_blockchain_serialize.rs"
