[package]
name = "bud-compiler"
version = "0.1.0"
edition = "2021"
# Phase 8.2: cargo-deny lisans kapısı için kök [workspace.package] değerini miras al
license.workspace = true

[dependencies]
bud-isa = { path = "../bud-isa" }
logos = "0.14"
tracing = "0.1"

[dev-dependencies]
bud-vm = { path = "../bud-vm" }

[features]
experimental = ["bud-isa/experimental"]
