[package]
name = "bud-node"
version = "0.1.0"
edition = "2021"
# Phase 8.2: cargo-deny lisans kapısı için kök [workspace.package] değerini miras al
license.workspace = true

[dependencies]
futures = { version = "0.3", features = ["std"] }
async-trait = "0.1"
# Async runtime
tokio = { version = "1", features = ["full"] }

# P2P networking (same versions as budlum-core)
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "identify",
    "kad",
    "request-response",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Logging
tracing = "0.1"

# Utilities
thiserror = "2"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
