[package]
name = "bud-state"
version = "0.1.0"
edition = "2021"
# Phase 8.2: cargo-deny lisans kapısı için kök [workspace.package] değerini miras al
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
