[package]
name = "bud-proof"
version = "0.1.0"
edition = "2021"
# Phase 8.2: cargo-deny lisans kapısı için kök [workspace.package] değerini miras al
license.workspace = true

[dependencies]
bud-vm = { path = "../bud-vm", features = ["experimental"] }
bud-isa = { path = "../bud-isa", features = ["experimental"] }
serde = { version = "1.0", features = ["derive"] }

p3-air = "0.6"
p3-matrix = "0.6"
p3-uni-stark = "0.6"
p3-field = "0.6"
p3-commit = "0.6"
p3-challenger = "0.6"
p3-symmetric = "0.6"
p3-keccak = "0.6"
p3-fri = "0.6"
p3-util = "0.6"
p3-goldilocks = "0.6"
p3-merkle-tree = "0.6"
p3-dft = "0.6"
postcard = { version = "1.0", features = ["alloc"] }
itertools = "0.14"
tracing = "0.1"
p3-maybe-rayon = "0.6"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[[bench]]
name = "proof_baseline"
harness = false
