[package]
name = "verifier-registry"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0"
license = "MIT"
description = "Generic RoleId-based staking + slashing registry for Budlum's multi-domain L1. Master Verifier, Relayer, Attester, and any future role share one primitive."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
serde_json = "1.0"
